# advent-of-code

./: '  Cargo.toml  README.md  d01.py  pyproject.toml  run_all.sh  template.py
2015/: README.md
2015/src/: d01.rs  d02.rs  d09.rs  d11.rs
2016/D01/: a.out  input.txt  main.cpp
2016/D03/: main.js
2017/d01/src/: main.rs
2018/: pyproject.toml
2018/d01/: main.py
2021/D06/: Y2021D06.go
2023/: .python-version  run_all.sh
2023/src/: d03.py  d07.py  d08.py  d09.py  d11.py  d12.py
2024/: Makefile
2024/D01/: input.txt  main.cpp  out  output.txt
2024/D02/: main.cpp
2024/D03/: main.cpp
2024/D04/: input.txt  main.cpp
2024/D05/: main.cpp
2024/D06/: main-cp.cpp  main.cpp  test.txt
2024/D07/: main.cpp
2024/D08/: main.cpp
2024/D09/: main.cpp
D01/: main  main.hi  main.hs  main.lua
D02/: main.js
inputs/: test_d11.txt
src/: d01.py  d01.rs  d02.py  d02.rs  d03.py  d03.rs  d04.py  d04.rs  d05.py  d05.rs  d06.py  d06.rs  d07.py  d07.rs  d08.py  d08.rs  d09.py  d09.rs  d10-v2.py  d10.py  d10.rs  d11.py  d11.rs  d12.py  utils.rs
