[[bin]]
name = 'd01'
path = 'src/d01.rs'

[[bin]]
name = 'd02'
path = 'src/d02.rs'

[[bin]]
name = 'd03'
path = 'src/d03.rs'

[package]
name = "advent_of_code_2015"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
