[tool.pyright]
pythonPath = "/Users/sushii/.pyenv/versions/3.11.7/envs/aoc23/bin/python"

[tool.isort]
profile = "black"

[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = "aoc23 solutions using python"
authors = ["Gustavo Luís Luchetti <gustavo@luchetti.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2023.10.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ruff = "^0.1.8"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
